--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -38,6 +38,7 @@
 <!ENTITY Ctr_tabsintitlebar	"Záhlaví okna Firefox (předvolba about:config)">
 <!ENTITY Ctr_tabwidthdef	"(výchozí)">
 <!ENTITY Ctr_tabwidthcla	"(klasický)">
+<!ENTITY Ctr_tabminheight	"Height:">
 <!ENTITY Ctr_tabmaxwidth	"Max-width:">
 <!ENTITY Ctr_tabminwidth	"Min-width:">
 <!ENTITY Ctr_tabwidthinfo	"Šířka panelů (min-width a max-width) je určena doplňkem TabMixPlus">
@@ -73,6 +74,7 @@
 <!ENTITY Ctr_appbuttonc_gr	"Šedé tlačítko">
 <!ENTITY Ctr_appbuttonc_pu	"Fialové tlačítko">
 <!ENTITY Ctr_appbuttonc_wh	"Bíle tlačítko">
+<!ENTITY Ctr_appbuttonc_cu	"Custom button color">
 <!ENTITY Ctr_appbuttonI1	"Doporučený restart">
 <!ENTITY Ctr_appbuttonI1e	"Není viditelné v záhlaví okna Windows OS, pouze v záhlaví okna Firefoxu!">
 <!ENTITY Ctr_appbuttonI2	"Barva tlačítka jsou viditelné pouze v záhlaví okna nebo liště s panely!">
@@ -151,6 +153,7 @@
 <!ENTITY Ctr_bold			"Tučný">
 <!ENTITY Ctr_italic			"Kurzíva">
 <!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
+<!ENTITY Ctr_tabc_act_tb	"Background color on toolbars">
 
 <!ENTITY Ctr_urlbar			"Urlbar">
 <!ENTITY Ctr_starinurl		"Tlačítko hvězdičky">
