--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -38,6 +38,7 @@
 <!ENTITY Ctr_tabsintitlebar	"Barra de título do Firefox (about:config)">
 <!ENTITY Ctr_tabwidthdef	"(padrão)">
 <!ENTITY Ctr_tabwidthcla	"(clássica)">
+<!ENTITY Ctr_tabminheight	"Height:">
 <!ENTITY Ctr_tabmaxwidth	"Largura Máxima:">
 <!ENTITY Ctr_tabminwidth	"Largura Mínima:">
 <!ENTITY Ctr_tabwidthinfo	"As larguras mínimas e máximas são controladas pelo TabMixPlus">
@@ -73,6 +74,7 @@
 <!ENTITY Ctr_appbuttonc_gr	"Botão cinza">
 <!ENTITY Ctr_appbuttonc_pu	"Botão púrpura">
 <!ENTITY Ctr_appbuttonc_wh	"Botão branco">
+<!ENTITY Ctr_appbuttonc_cu	"Custom button color">
 <!ENTITY Ctr_appbuttonI1	"recomenda-se reiniciar">
 <!ENTITY Ctr_appbuttonI1e	"invisível na barra de título do Sistema Operacional">
 <!ENTITY Ctr_appbuttonI2	"Colorido só nas barras de título e de guias!">
@@ -151,6 +153,7 @@
 <!ENTITY Ctr_bold			"Negrito">
 <!ENTITY Ctr_italic			"Itálico">
 <!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
+<!ENTITY Ctr_tabc_act_tb	"Background color on toolbars">
 
 <!ENTITY Ctr_urlbar			"Barra de URLs">
 <!ENTITY Ctr_starinurl		"Botão de favoritos">
