--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -38,6 +38,7 @@
 <!ENTITY Ctr_tabsintitlebar	"标签栏嵌入标题栏 (about:config)">
 <!ENTITY Ctr_tabwidthdef	"(默认)">
 <!ENTITY Ctr_tabwidthcla	"(经典)">
+<!ENTITY Ctr_tabminheight	"Height:">
 <!ENTITY Ctr_tabmaxwidth	"最大宽度:">
 <!ENTITY Ctr_tabminwidth	"最小宽度:">
 <!ENTITY Ctr_tabwidthinfo	"标签页的最小宽度和最大宽度由 TabMixPlus 所控制">
@@ -73,6 +74,7 @@
 <!ENTITY Ctr_appbuttonc_gr	"灰色按钮">
 <!ENTITY Ctr_appbuttonc_pu	"紫色按钮">
 <!ENTITY Ctr_appbuttonc_wh	"白色按钮">
+<!ENTITY Ctr_appbuttonc_cu	"Custom button color">
 <!ENTITY Ctr_appbuttonI1	"重启浏览器后生效">
 <!ENTITY Ctr_appbuttonI1e	"在 OS 标题栏上不可见">
 <!ENTITY Ctr_appbuttonI2	"只在标题栏生效 以及标签页栏!">
@@ -151,6 +153,7 @@
 <!ENTITY Ctr_bold			"加粗">
 <!ENTITY Ctr_italic			"斜体">
 <!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
+<!ENTITY Ctr_tabc_act_tb	"Background color on toolbars">
 
 <!ENTITY Ctr_urlbar			"Urlbar">
 <!ENTITY Ctr_starinurl		"收藏按钮嵌入地址栏">
